versioned_docs/version-23.2/manage/cluster-maintenance/configure-availability.mdx
---
title: Configure Availability 
---

<head>
    <meta name="title" content="Configure Availability | Redpanda Docs"/>
    <meta name="description" content="Guidelines for configuring Redpanda clusters for optimal availability."/>
</head>

import ConfigureAvailabilityIntro from './shared/_intro-configure-availability.mdx'

<ConfigureAvailabilityIntro/>

## Limit Client Connections

A malicious Kafka client application may create many network connections to execute its attacks. A poorly configured application may also create an excessive number of connections. To mitigate the risk of a client creating too many connections and using too many system resources, you can configure a Redpanda cluster to impose limits on the number of created client connections for its Kafka protocol server nodes. 

The following cluster properties limit the number of connections:

- [kafka_connections_max](../../../reference/cluster-properties#kafka_connections_max): Similar to Kafka's `max.connections`, this property sets the maximum number of connections per broker.
- [kafka_connections_max_per_ip](../../../reference/cluster-properties#kafka_connections_max_per_ip): Similar to Kafka's `max.connections.per.ip`, this property sets the maximum number of connections accepted per IP address by a broker.
- [kafka_connections_max_overrides](../../../reference/cluster-properties#kafka_connections_max_overrides): A list of IP addresses for which [kafka_connections_max_per_ip](../../../reference/cluster-properties#kafka_connections_max_per_ip) is overridden and doesn't apply.

Redpanda also provides properties to manage the rate of connection creation:

- [kafka_connection_rate_limit](../../../reference/cluster-properties#kafka_connection_rate_limit): This property limits the maximum rate of connections created per second. It applies per CPU core.
- [kafka_connection_rate_limit_overrides](../../../reference/cluster-properties#kafka_connection_rate_limit_overrides): A list of IP addresses for which [kafka_connection_rate_limit](../../../reference/cluster-properties#kafka_connection_rate_limit) is overridden and doesn't apply.

:::note notes
- These connection limit properties are disabled by default. You must manually enable them.
- Typically, a client opens two or three connections, so the total number of connections is not equal to the number of clients. For example, to support 100 clients, you might set your connection limit to 300.
:::

## Prevent crash loops

A Redpanda node may create a non-insignificant amount of log segments at startup. If a node were to crash after startup, and if it were to get stuck in a crash loop, it would produce progressively more stored state that uses more disk space and takes more time for each restart to process.  

To prevent infinite crash loops, the node property [crash_loop_limit](../../../reference/node-properties#crash_loop_limit) sets an upper limit on the number of consecutive crashes that can happen within one hour of each other. Once it reaches the limit, a node cannot restart until its internal consecutive crash counter is reset to zero by one of the following conditions:

- The node configuration file, `redpanda.yaml`, is updated.
- The `startup_log` file in the node's [data_directory](../../../reference/node-properties#data_directory) is manually deleted.
- One hour elapses since the last crash.
- The node is cleanly shut down. (This is not possible after `crash_loop_limit` has been reached and the node cannot be restarted.)

:::note notes
- The limit property is disabled by default. You must manually enable it by setting it to a non-zero value.
- If the limit is less than two, the node will be blocked from restarting after every single crash, until one of the reset conditions is met.
:::
